--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 target/m2e-wtp/web-resources/META-INF/maven/book/book/pom.properties
+
+target/m2e-wtp/web-resources/META-INF/maven/book/book/pom.properties
+
+target/m2e-wtp/web-resources/META-INF/maven/book/book/pom.properties
